--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,34 @@
+Mon Jan 5 19:18:00 1997   Jeff Bailey  (jbailey@gnu.org)
+
+	* src/io-gtk.c: Implement gio_inputize_cursor
+			Change gdk_pixmap_destroy to gdk_pixmap_unref
+			Add further debugs in gio_redraw_input
+			Add default fonts to Oleo
+			Kludge gio_repaint_win
+	* src/io-term.c: Remove some Debug warnings
+	
+Sun Dec 14 15:47:00 1997  Jeff Bailey  (jbailey@gnu.org)
+
+	* src/io-term.c: Remove openning warranty screen for testing.
+
+Fri Dec 12 21:43:00 1997  Jeff Bailey  (jbailey@gnu.org)
+
+	* src/io-gtk.c: Kludge g_input_metric into working so oleo will load.
+
+Mon Dec 8 20:49:00 1997   Jeff Bailey  (jbailey@gnu.org)
+
+	* src/utils.c: Add #include <stdarg.h> fix typos
+	* src/line.c: ""
+	* src/cmd.c: ""
+	* src/info.c: ""
+	* src/io-gtk.c: Flush out repaint function
+	* src/input.c: Add troubleshooting statements
+
+Thu Nov 27 22:39:00 1997  Jeff Bailey  (jbailey@gnu.org)
+
+	* */Makefile.in: Regenerate with Automake 1.2d
+	* doc/texinfo.tex: Update from FSF Copy
+
 Tue Nov 25 20:44:00 1997  Jeff Bailey  (jbailey@gnu.org)
 
 	* src/utils.c: ANSIfy
